dataset1235/2025-2/2318198438/users/3921522300/executions/2445341515_1050673866.log
== SUBMISSION (2025-09-02 00:14:12)
-- CODE: 
peso = float(input())
qtd = floa(input())

siada = peso - (qtd*4)

print(round(siada,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:14:30)
-- CODE: 
peso = float(input())
qtd = floa(input())

siada = peso - (qtd*4)

print(round(siada,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd = floa(input())
          ^^^^
NameError: name 'floa' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:14:49)
-- CODE: 
peso = float(input())
qtd = float(input())

siada = peso - (qtd*4)

print(round(siada,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2565.9
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5583.27
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
919.89
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1837.46
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2156.36
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
